--- a/gbsplay/TODO
+++ b/gbsplay/TODO
@@ -1,4 +1,4 @@
-$Id: TODO,v 1.2 2003/08/30 19:24:36 mitch Exp $
+$Id: TODO,v 1.3 2003/08/31 17:46:34 ranma Exp $
 
 TODO list for gbsplay.
 
@@ -10,6 +10,6 @@ TODO list for gbsplay.
 
 ( )  make gbsinfo output more script friendly
      (perhaps via with commandline switch)
-( )  add "--next_song_after_pause" switch to gbsplay
-( )  add "--next_song_after_playtime" switch to gbsplay
+(X)  add "--next_song_after_pause" switch to gbsplay
+(X)  add "--next_song_after_playtime" switch to gbsplay
 ( )  add info about GBS formats 1 and 2
