--- a/gbsplay/gbsplay.1
+++ b/gbsplay/gbsplay.1
@@ -36,9 +36,17 @@ The sound file to play.  Must be in uncompressed .GBS format.
 .TP
 \fIsubsong\-number\fR
 The subsong from the sound file to play.  If nothing is specified, the default song will be played.  An out\-of\-bounds number will result in an error.
+.SH "FILES"
+.TP
+\fI/etc/gbsplayrc\fR
+Default location of the global configuration file.
+.TP
+\fI~/\.gbsplayrc\fR
+User configuration file.
 .SH "SEE ALSO"
 \fIgbsinfo\fR(1)
-.SH "BUG REPORS"
+\fIgbsplayrc\fR(5)
+.SH "BUG REPORTS"
 If you encounter bugs, please report them to <\fIranma@gmx.at\fR>.
 .SH "AUTHOR"
 gbsplay was written by Tobias Diedrich <\fIranma@gmx.at\fR> (with contributions from others, see README).
