--- a/gbsplay/gbsplay.1
+++ b/gbsplay/gbsplay.1
@@ -15,6 +15,9 @@ over /dev/dsp.
 \fI\-h\fR
 Display short help and exit.
 .TP
+\fI\-q\fR
+Be quiet, show only error messages.
+.TP
 \fI\-r samplerate\fR
 Set the samplerate to \fIsamplerate\fR Hz.  Default value is 44100Hz.
 .TP
