--- a/gbsplay/TODO
+++ b/gbsplay/TODO
@@ -1,13 +1,16 @@
-<<$Id: TODO,v 1.8 2003/09/12 18:56:35 mitch Exp $>>
+<<$Id: TODO,v 1.9 2003/09/13 07:36:08 mitch Exp $>>
 
 
 TODO list for gbsplay.
 
 
-### version 0.0.2:
+### bugs
 
-( )  set up feature list for 0.0.2 release
-( )  pump up man page version number on release!
+( )  XMMS Plugin:
+     forwarding though subsongs works
+     when jumping back a subsong, the songchange is ok, but the time
+     and position display always jump straight to the beginning
+
 
 ### unspecified: (bits'n'ideas)
 
@@ -17,3 +20,10 @@ TODO list for gbsplay.
 ( )  add random and shuffle mode (as "described" by mpg123) for subsongs
 ( )  generate 1 dynamic library that is used by gbsplay, gbsinfo and gbsxmms
 ( )  add fadeout option to automatic songchange
+
+
+### version 0.0.2:
+
+( )  set up feature list for 0.0.2 release
+( )  pump up man page version number on release!
+
