--- a/gbsplay/TODO
+++ b/gbsplay/TODO
@@ -1,4 +1,4 @@
-<<$Id: TODO,v 1.11 2003/09/13 15:21:55 mitch Exp $>>
+<<$Id: TODO,v 1.12 2003/09/13 15:47:35 mitch Exp $>>
 
 
 TODO list for gbsplay.
@@ -41,5 +41,5 @@ TODO list for gbsplay.
 ( )  gbsplay: add repeat mode for module
      (after the last subsong subsong 1 starts over)
 
-( )  gbsplay: stop at a given subsong
+(X)  gbsplay: stop at a given subsong
      ("gbsplay $file 3 3" will play only song 3 and then stop)
