--- a/gbsplay/TODO
+++ b/gbsplay/TODO
@@ -1,10 +1,13 @@
-<<$Id: TODO,v 1.12 2003/09/13 15:47:35 mitch Exp $>>
+<<$Id: TODO,v 1.13 2003/09/13 16:03:00 mitch Exp $>>
 
 
 TODO list for gbsplay.
 
 
 ### bugs
+
+( )  gbsplay:
+     segmentation fault on startup when $start_subsong is out-of-bounds
 
 
 
@@ -22,10 +25,13 @@ TODO list for gbsplay.
 
 ( )  pump up man page version number on release!
 
-(X)  xmms-gbs bugfix:
+(X)  BUGFIX xmms-gbs:
      forwarding though subsongs works
      when jumping back a subsong, the songchange is ok, but the time
      and position display always jump straight to the beginning
+
+(X)  BUGFIX gbsplay:
+     don't display "out of bounds error" after playing last subsong
 
 ( )  make gbsinfo output more script friendly
      (perhaps via with commandline switch)
