No longer need to hit return

--- a/gbsplay/gbsplay.1
+++ b/gbsplay/gbsplay.1
@@ -43,7 +43,7 @@ The subsong from the sound file to play.  If nothing is specified, the default s
 \fIstop\-subsong\fR
 gbsplay stops when this subsong has been played.  If nothing is specified, gbsplay stops after playing the last subsong.
 .SH "KEYBOARD CONTROL"
-\fBgbsplay\fR supports basic keyboard control.  You probably need to hit \fIreturn\fR after every command.  The following commands are recognized:
+\fBgbsplay\fR supports basic keyboard control.  The following commands are recognized:
 .TP
 \fIp\fR
 Skip to the previous subsong.
