Add playmode commandline options.

--- a/gbsplay/gbsplay.1
+++ b/gbsplay/gbsplay.1
@@ -32,6 +32,12 @@ Set silence timeout to \fIsilence\-timeout\fR seconds.  When a subsong contains 
 .TP
 \fI\-V\fR
 Display version number and exit.
+.TP
+\fI\-z\fR
+Play subsongs in random mode.  Every subsong will be played once in random order.
+.TP
+\fI\-Z\fR
+Play subsongs in shuffle mode.  Like random mode, but a subsong can be played multiple times.
 .SH "PARAMETERS"
 .TP
 \fIgbs\-file\fR
