--- a/gbsplay/gbsplay.1
+++ b/gbsplay/gbsplay.1
@@ -47,7 +47,7 @@ The sound file to play.  Must be in uncompressed .GBS format.
 The subsong from the sound file to play.  If not specified, the default song will be played (unless in shuffle or random mode).  An out\-of\-bounds number will be clipped to the possible range of subsongs.
 .TP
 \fIstop\-subsong\fR
-gbsplay stops when this subsong has been played.  If not specified, gbsplay stops after playing the last subsong.  An out\-of\-bounds number will be clipped to the possible range of subsongs.
+gbsplay stops when this subsong has been played.  If not specified or out-of-bound, gbsplay will stop after playing the last subsong.
 .SH "KEYBOARD CONTROL"
 \fBgbsplay\fR supports basic keyboard control.  The following commands are recognized:
 .TP
