--- a/gbsplay/TODO
+++ b/gbsplay/TODO
@@ -1,4 +1,4 @@
-<<$Id: TODO,v 1.18 2003/09/20 18:31:01 mitch Exp $>>
+<<$Id: TODO,v 1.19 2003/09/21 08:24:35 mitch Exp $>>
 
 
 TODO list for gbsplay.
@@ -13,6 +13,15 @@ TODO list for gbsplay.
 
 ( )  generate 1 dynamic library that is used by gbsplay, gbsinfo and gbsxmms
 
+( )  make gbsinfo output more script friendly
+     (perhaps via with commandline switch)
+
+( )  gbsplay: add fadeout option to automatic songchange
+
+( )  gbsplay: add repeat mode for module
+     (after the last subsong subsong 1 starts over)
+
+( )  gbsplay: add restart subsong keyboard command
 
 
 ### version 0.0.2:
@@ -38,19 +47,11 @@ TODO list for gbsplay.
 (X)  BUGFIX gbsplay:
      subsong_stop default was set to 0.
 
-( )  make gbsinfo output more script friendly
-     (perhaps via with commandline switch)
-
-( )  gbsplay: add fadeout option to automatic songchange
-
 (X)  gbsplay: add shuffle mode for subsongs
      (play every subsong once)
 
 (X)  gbsplay: add random mode for subsongs
      (single subsongs can be played more than once)
-
-( )  gbsplay: add repeat mode for module
-     (after the last subsong subsong 1 starts over)
 
 (X)  gbsplay: stop at a given subsong
      ("gbsplay $file 3 3" will play only song 3 and then stop)
