Add version number to manpages automatically. gbsplayrc.in.5 is based on gbsplayrc.5 rev1.3

--- a/gbsplay/gbsplayrc.in.5
+++ b/gbsplay/gbsplayrc.in.5
@@ -1,6 +1,7 @@
+.\" $Id: gbsplayrc.in.5,v 1.1 2003/09/22 18:21:37 mitch Exp $
 .\" This manpage 2003 (C) by Christian Garbs <mitch@cgarbs.de>
 .\" Licensed under GNU GPL.
-.TH "gbsplayrc" "5" "0.0.2" "Tobias Diedrich" "Gameboy sound player"
+.TH "gbsplayrc" "5" "%%%VERSION%%%" "Tobias Diedrich" "Gameboy sound player"
 .SH "NAME"
 .LP
 \fBgbsplayrc\fR \- Gameboy sound player configuration file
