Add version number to manpages automatically. gbsplay.in.1 is based on gbsplay.1 rev1.13

--- a/gbsplay/gbsplay.in.1
+++ b/gbsplay/gbsplay.in.1
@@ -1,6 +1,7 @@
+.\" $Id: gbsplay.in.1,v 1.1 2003/09/22 18:21:39 mitch Exp $
 .\" This manpage 2003 (C) by Christian Garbs <mitch@cgarbs.de>
 .\" Licensed under GNU GPL.
-.TH "gbsplay" "1" "0.0.2" "Tobias Diedrich" "Gameboy sound player"
+.TH "gbsplay" "1" "%%%VERSION%%%" "Tobias Diedrich" "Gameboy sound player"
 .SH "NAME"
 .LP
 \fBgbsplay\fR \- Gameboy sound player
