Add version number to manpages automatically. gbsinfo.in.1 is based in gbsinfo.1 rev1.4

--- a/gbsplay/gbsinfo.in.1
+++ b/gbsplay/gbsinfo.in.1
@@ -1,6 +1,7 @@
+.\" $Id: gbsinfo.in.1,v 1.1 2003/09/22 18:22:09 mitch Exp $
 .\" This manpage 2003 (C) by Christian Garbs <mitch@cgarbs.de>
 .\" Licensed under GNU GPL.
-.TH "gbsinfo" "1" "0.0.2" "Tobias Diedrich" "Gameboy sound player"
+.TH "gbsinfo" "1" "%%%VERSION%%%" "Tobias Diedrich" "Gameboy sound player"
 .SH "NAME"
 .LP
 \fBgbsinfo\fR \- display Gameboy sound file information
