--- a/gbsplay/gbsplay.in.1
+++ b/gbsplay/gbsplay.in.1
@@ -1,4 +1,4 @@
-.\" $Id: gbsplay.in.1,v 1.1 2003/09/22 18:21:39 mitch Exp $
+.\" $Id: gbsplay.in.1,v 1.2 2003/10/11 17:45:55 mitch Exp $
 .\" This manpage 2003 (C) by Christian Garbs <mitch@cgarbs.de>
 .\" Licensed under GNU GPL.
 .TH "gbsplay" "1" "%%%VERSION%%%" "Tobias Diedrich" "Gameboy sound player"
@@ -58,7 +58,7 @@ Skip to the previous subsong.
 \fIn\fR
 Skip to the next subsong.
 .TP
-\fIq\fR
+\fIq\fR or \fIEsc\fR
 Quit gbsplay.
 .SH "FILES"
 .TP
