Enable play/pause in gbsplay

--- a/gbsplay/gbsplay.in.1
+++ b/gbsplay/gbsplay.in.1
@@ -1,4 +1,4 @@
-.\" $Id: gbsplay.in.1,v 1.2 2003/10/11 17:45:55 mitch Exp $
+.\" $Id: gbsplay.in.1,v 1.3 2003/10/11 17:47:09 mitch Exp $
 .\" This manpage 2003 (C) by Christian Garbs <mitch@cgarbs.de>
 .\" Licensed under GNU GPL.
 .TH "gbsplay" "1" "%%%VERSION%%%" "Tobias Diedrich" "Gameboy sound player"
@@ -57,6 +57,9 @@ Skip to the previous subsong.
 .TP
 \fIn\fR
 Skip to the next subsong.
+.TP
+\fISpace\fR
+Toggle play/pause.
 .TP
 \fIq\fR or \fIEsc\fR
 Quit gbsplay.
