--- a/gbsplay/TODO
+++ b/gbsplay/TODO
@@ -1,4 +1,4 @@
-<<$Id: TODO,v 1.26 2003/10/11 17:45:55 mitch Exp $>>
+<<$Id: TODO,v 1.27 2003/10/11 17:47:08 mitch Exp $>>
 
 
 TODO list for gbsplay.
@@ -38,3 +38,5 @@ TODO list for gbsplay.
 (X)  set version number in manpages automatically
 
 (X)  gbsplay: mention Esc to quit gbsplay
+
+(X)  gbsplay: allow play/pause with Space bar
