--- a/gbsplay/README
+++ b/gbsplay/README
@@ -1,4 +1,4 @@
-<<$Id: README,v 1.3 2003/09/12 18:53:17 mitch Exp $>>
+<<$Id: README,v 1.4 2003/10/24 11:58:00 ranma Exp $>>
 
 gbsplay - A Gameboy sound player
 
@@ -18,10 +18,11 @@ This program emulates the sound hardware of the Nintendo Gameboy.  It
 is able to play the sounds from a Gameboy module dump (.GBS format)
 over /dev/dsp.
 
-gbsplay is compatible to GBS v1 and v2.  The gbsplay package contains
+gbsplay is compatible to GBSv1.  It uses a backwards compatible extension
+to store additional information in the file.  The gbsplay package contains
 the following parts:
 
- * gpslay:      a console player
+ * gbsplay:     a console player
  * gbsinfo:     displays information about a gbs file
  * gbsxmms.so:  an .GBS input plugin for XMMS
 
