--- a/gbsplay/TODO
+++ b/gbsplay/TODO
@@ -1,4 +1,4 @@
-<<$Id: TODO,v 1.33 2003/10/24 00:25:55 ranma Exp $>>
+<<$Id: TODO,v 1.34 2003/10/30 19:25:21 mitch Exp $>>
 
 
 TODO list for gbsplay.
@@ -6,12 +6,11 @@ TODO list for gbsplay.
 
 ### bugs
 
+( )  gbsplay: screen scrolls up one line on resume
+
 ### unspecified: (bits'n'ideas)
 
 ( )  generate 1 dynamic library that is used by gbsplay, gbsinfo and gbsxmms
-
-( )  make gbsinfo output more script friendly
-     (perhaps via with commandline switch)
 
 ( )  gbsplay: add repeat mode for module
      (after the last subsong subsong 1 starts over)
@@ -41,6 +40,11 @@ TODO list for gbsplay.
 
 (X)  gbsplay: add fadeout and subsong gap
 
+(X)  gbsplay: add channel mute
+
 (X)  Makefile: fix dist target (manpages were broken)
 
 (X)  gbs2ogg.sh: contributed script to convert .gbs to .ogg
+
+(X)  make gbsinfo output more script friendly
+     (perhaps via with commandline switch)
