Add channel mute commands.

--- a/gbsplay/gbsplay.in.1
+++ b/gbsplay/gbsplay.in.1
@@ -1,4 +1,4 @@
-.\" $Id: gbsplay.in.1,v 1.5 2003/10/11 19:48:54 mitch Exp $
+.\" $Id: gbsplay.in.1,v 1.6 2003/10/30 19:29:15 mitch Exp $
 .\" This manpage 2003 (C) by Christian Garbs <mitch@cgarbs.de>
 .\" Licensed under GNU GPL.
 .TH "gbsplay" "1" "%%%VERSION%%%" "Tobias Diedrich" "Gameboy sound player"
@@ -69,6 +69,18 @@ Quit gbsplay.
 .TP
 \fISpace\fR
 Toggle play/pause.
+.TP
+\fI1\fR
+Mute/unmute channel 1.
+.TP
+\fI2\fR
+Mute/unmute channel 2.
+.TP
+\fI3\fR
+Mute/unmute channel 3.
+.TP
+\fI4\fR
+Mute/unmute channel 4.
 .SH "FILES"
 .TP
 \fI/etc/gbsplayrc\fR
