--- a/gbsplay/TODO
+++ b/gbsplay/TODO
@@ -1,4 +1,4 @@
-<<$Id: TODO,v 1.34 2003/10/30 19:25:21 mitch Exp $>>
+<<$Id: TODO,v 1.35 2003/11/29 23:36:34 ranma Exp $>>
 
 
 TODO list for gbsplay.
@@ -22,6 +22,10 @@ TODO list for gbsplay.
 ### version 0.0.3:
 
 ( )  set up feature list for 0.0.3 release
+
+(X)  fixed some incorrect c type assumptions (char not signed on some platforms)
+
+(X)  fixed some endian issues (replaced AFMT_S16_LE by AFMT_S16_NE)
 
 (X)  change gbs_(open|write) to conform to new gbsformat.txt
 
